ghc-4335c07/testsuite/tests/typecheck/should_fail/T9999.hs
{-# LANGUAGE AutoDeriveTypeable, PolyKinds, TypeFamilies, StandaloneDeriving #-}

module T9999 where

import Data.Typeable

data family F a

class C a where
  data F1 a
  type F2 a

main = typeRep (Proxy :: Proxy F) == typeRep (Proxy :: Proxy F1)
