ghc-4335c07/testsuite/tests/typecheck/should_fail/T9999.stderr

T9999.hs:13:38: error:
    • No instance for (Typeable k0) arising from a use of ‘typeRep’
    • In the second argument of ‘(==)’, namely
        ‘typeRep (Proxy :: Proxy F1)’
      In the expression:
        typeRep (Proxy :: Proxy F) == typeRep (Proxy :: Proxy F1)
      In an equation for ‘main’:
          main = typeRep (Proxy :: Proxy F) == typeRep (Proxy :: Proxy F1)
